# sqlym

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.ja.md  README.md  SQL_SYNTAX.ja.md  SQL_SYNTAX.md  TASK.md  cspell.json  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: DESIGN.md  REVIEW-2026-03-01.md  SPEC.M2.md  SPEC.md  TASK.M1.md
examples/: README.md  crud_example.py
examples/clean_architecture/: README.md  main.py
examples/clean_architecture/application/use_cases/: __init__.py  create_order.py  create_user.py
examples/clean_architecture/domain/models/: __init__.py  order.py  user.py
examples/clean_architecture/domain/repositories/: __init__.py  order_repository.py  user_repository.py
examples/clean_architecture/infrastructure/dao/: __init__.py  order_dao.py  user_dao.py
examples/clean_architecture/infrastructure/dao/entities/: __init__.py  order_entity.py  user_entity.py
examples/clean_architecture/infrastructure/repositories/: __init__.py  order_repository.py  user_repository.py
examples/clean_architecture/sql/orders/: find_by_user_id.sql  insert.sql
examples/clean_architecture/sql/users/: find_all.sql  find_by_email.sql  find_by_id.sql  insert.sql
examples/sql/: delete_user.sql  find_users.sql  insert_user.sql  update_user.sql
src/sqly/: __init__.py  _parse.py  config.py  dialect.py  exceptions.py  loader.py
src/sqly/mapper/: __init__.py  column.py  dataclass.py  factory.py  manual.py  protocol.py  pydantic.py
src/sqly/parser/: line_unit.py  tokenizer.py  twoway.py
src/sqlym/: escape_utils.py  sqlym.py
src/sqlym/mapper/: column.py  dataclass.py
src/sqlym/parser/: __init__.py  line_unit.py  tokenizer.py  twoway.py
tests/: conftest.py  test_block_directives.py  test_column_entity.py  test_create_mapper.py  test_dataclass_mapper.py  test_dialect.py  test_exceptions.py  test_helper_functions.py  test_include.py  test_inline_conditions.py  test_line_unit.py  test_mapper_protocol.py  test_modifiers.py  test_multiline_string.py  test_negative_positive.py  test_public_api.py  test_pydantic_mapper.py  test_sql_loader.py  test_sqlym.py  test_tokenizer.py  test_twoway_clean_sql.py  test_twoway_in_clause.py  test_twoway_param_substitution.py  test_twoway_parse_lines.py  test_twoway_placeholder.py  test_twoway_removal.py  test_twoway_with_clause.py
tests/integration/: test_mysql.py  test_oracle.py  test_postgresql.py  test_sqlite.py
