[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqly"
version = "0.1.0"
description = "SQL-first database access library for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "izuno4t" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
postgresql = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
oracle = ["oracledb>=3.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.1",
    "oracledb>=3.0",
    "pymysql>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgresql: PostgreSQL integration tests (require running PostgreSQL)",
    "mysql: MySQL integration tests (require running MySQL)",
    "oracle: Oracle integration tests (require running Oracle)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sqly"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".ruff_cache", ".venv", ".vscode"]

[tool.ruff.lint]
preview = true
select = [
    "ANN", # type annotation
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PTH", # use `pathlib.Path` instead of `os.path`
    "RUF", # ruff specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
    "B007",   # Unused loop variable
    "B008",   # Function call in default argument
    "B905",   # `zip()` without `strict=True`
    "COM812", # Missing trailing comma
    "COM819", # Trailing comma prohibited
    "D1",     # Missing docstring in public module, class, function, or method
    "D203",   # One blank line required before class docstring
    "D205",   # 1 blank line required between summary line and description
    "D212",   # Multi-line docstring summary should start at the first line
    "D213",   # Multi-line docstring summary should start at the second line
    "D400",   # First line of docstring should end with a period
    "D415",   # First line of docstring should end with punctuation
    "E114",   # Indentation is not a multiple of four (comment)
    "G004",   # Logging statement uses f-string
    "ISC001", # Implicit string concatenation on a single line
    "ISC002", # Implicit string concatenation on multiple lines
    "PTH123", # `open()` should be replaced by `Path.open()`
    "Q000",   # Single quotes found when double quotes are preferred
    "Q001",   # Single quotes found for multi-line strings
    "Q002",   # Single quotes found for docstrings
    "RUF001", # Checks for ambiguous Unicode characters in strings.
    "RUF002", # Checks for ambiguous Unicode characters in docstrings.
    "RUF003", # Checks for ambiguous Unicode characters in comments.
    "SIM105", # try-except-pass blocks
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM116", # Use a dictionary instead of consecutive `if` statements
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
